[package]
name = "always-goofy-things"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
regex = "1.12"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
